--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ hero підвал: #2F303A;
 акцент: #2196F3
 активна кнопка: #188CE8
  */
+
 :root {
   --main-color: #757575;
   --title-text-color: #212121;
@@ -21,6 +22,14 @@ hero підвал: #2F303A;
   --bg-color-team: #f5f4fa;
 }
 
+/* RESET */
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 body {
   color: var(--main-color);
   font-family: "Roboto", sans-serif;
@@ -28,31 +37,75 @@ body {
   letter-spacing: 0.03em;
 }
 
+.container {
+  width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+
+  outline: red 1px solid;
+}
+
 .link {
   text-decoration: none;
 }
 
 .list {
+  padding-left: 0;
+  margin: 0;
   list-style: none;
+}
+
+.img {
+  display: block;
+  width: 100%;
 }
 
 /* Logo */
 .header-logo {
-  color: #000;
+  margin-right: 93px;
+
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: calc(31 / 26);
   text-decoration: none;
+
+  color: #000;
 }
 .logo-style {
   color: var(--accent-color);
 }
 
 /* Header */
-.header {
+
+.page-header {
+  padding: 0;
+}
+
+.page-header .container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-list {
+  display: flex;
+}
+
+.header-list .item:not(:first-child) {
+  margin-left: 50px;
+}
+
+.page-header {
   background-color: var(--white-color);
 }
+
 .header-link {
   color: var(--title-text-color);
   font-weight: 500;
@@ -61,44 +114,87 @@ body {
   letter-spacing: 0.02em;
   cursor: pointer;
 }
-.header-auth-nav .link {
+
+.header-tel .link {
   color: inherit;
 }
+
 .current {
   color: var(--accent-color);
 }
+
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-color);
 }
 
+.header-contacts {
+  margin-left: auto;
+}
+
 /* Hero */
+
 .hero {
   text-align: center;
-  letter-spacing: 0.06em;
+
   background-color: var(--bg-color-dark);
 }
+
 .hero-title {
-  color: var(--white-color);
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
+  letter-spacing: 0.06em;
   text-transform: uppercase;
-}
-.hero-button {
+
   color: var(--white-color);
+}
+
+.hero-button {
+  display: inline-block;
+  padding: 10px 32px;
+  min-width: 216px;
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
   align-items: center;
-  text-align: center;
+
   letter-spacing: 0.06em;
-  cursor: pointer;
+  color: var(--white-color);
   background-color: var(--accent-color);
+
+  border: 1px solid transparent;
+  border-radius: 4px;
+
+  cursor: pointer;
+}
+
+.hero-description {
+  padding-top: 200px;
+  padding-right: 452px;
+  padding-bottom: 200px;
+  padding-left: 452px;
 }
 
 /* Наша ефективність */
+.about {
+  background-color: var(--bg-color-work);
+}
+
+.about-list {
+  display: flex;
+  margin-left: -30px;
+}
+
+.about-list .item {
+  flex-basis: calc((100% - 120px) / 4);
+  margin-left: 30px;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -111,48 +207,82 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.section {
-  background-color: var(--bg-color-work);
-}
-.section-title {
-  color: var(--title-text-color);
+
+.about-title {
+  margin-bottom: 10px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: calc(16 / 14);
   text-transform: uppercase;
+
+  color: var(--title-text-color);
 }
-.section-text {
+.about-text {
   font-size: 14px;
   line-height: calc(24 / 14);
 }
-
+.about-description {
+  padding-top: 94px;
+}
 /* Чим ми займаємося */
+.work {
+  padding: 94px 0;
+  background-color: var(--bg-color-work);
+}
+.work .list {
+  display: flex;
+  margin-left: -30px;
+}
+.work-list .item {
+  width: calc((100% - 90px) / 3);
+  margin-left: 30px;
+}
 .title-work-team {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
   color: var(--title-text-color);
 }
-.work {
-  background-color: var(--bg-color-work);
-}
 
 /* Наша команда */
-.team-title-third {
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  background-color: var(--bg-color-team);
+}
+
+.team-img {
+  margin-bottom: 30px;
+}
+.team-title {
+  /* padding-top: 30px; */
+  margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
   color: var(--title-text-color);
 }
-.team {
-  background-color: var(--bg-color-team);
+.team-list {
+  display: flex;
+  margin-left: -30px;
 }
-.list-item {
+
+.team-list .item {
+  width: calc((100% - 120px) / 4);
+  margin-left: 30px;
+}
+.team-list .item {
   background-color: var(--white-color);
 }
 .team-position {
+  margin-bottom: 30px;
+
   font-weight: 400;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -163,10 +293,17 @@ body {
 .footer {
   background-color: var(--bg-color-dark);
 }
+.footer-logo {
+  display: block;
+  padding-top: 60px;
+  margin: 0;
+}
 .footer-logo-style {
   color: var(--white-color);
 }
 .address {
+  display: block;
+  margin-top: 20px;
   color: var(--white-color);
   font-style: normal;
   font-weight: 400;
@@ -175,12 +312,17 @@ body {
   letter-spacing: 0.03em;
 }
 .mail-tel {
+  display: block;
+  margin-top: 9px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--transparent-color);
+}
+.footer-list .item:last-child {
+  padding-bottom: 60px;
 }
 
 /* Portfolio */
@@ -189,30 +331,76 @@ body {
 }
 
 /* Кнопки */
+.button-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 50px;
+  padding-top: 180px;
+}
+
+.button-list .item:not(:first-child) {
+  margin-left: 8px;
+}
 .button {
-  color: var(--title-text-color);
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+
   font-family: inherit;
-  background-color: var(--bg-color-team);
   font-weight: 500;
   font-size: 16px;
   line-height: calc(26 / 16);
   text-align: center;
+
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
+
+  background-color: var(--bg-color-team);
+  color: var(--title-text-color);
 }
+
 .button-current {
   color: var(--white-color);
   background-color: var(--accent-color);
 }
 
 /* Проекти */
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.project-list .item {
+  flex-basis: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.project-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.project-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.project-img {
+  margin-bottom: 20px;
+}
 .project-title {
-  color: var(--title-text-color);
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
   letter-spacing: 0.06em;
+
+  color: var(--title-text-color);
 }
 .project-text {
+  margin-bottom: 20px;
+
   font-size: 16px;
   line-height: calc(30 / 16);
 }
