--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,8 @@ body {
 .page-header {
   padding-top: 24px;
   padding-bottom: 25px;
+
+  border-bottom: 1px solid #ececec;
 }
 
 .page-header .container {
@@ -279,6 +281,10 @@ body {
 .team-list .item {
   width: calc((100% - 90px) / 4);
   margin-left: 30px;
+
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-list .item:first-child {
