--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,10 @@ body {
 
 .project-container {
   padding-top: 20px;
+  padding-right: 24px;
   padding-bottom: 20px;
+  padding-left: 24px;
+
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
